[ADD]Colores y portadas con descripcion

--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     <meta name="author" content="viejomastering">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Viejo Mastering</title>
+    <title>Wally producciones</title>
     <!-- TODO CAMBIAR EL ICONO -->
     <link rel="icon" type="image/png" href="./material_grafico/isotipo/Wally-Isotipo-V1---Rosado-Crema.png" sizes="16x16">
     <!-- TODO CAMBIAR EL ICONO -->
@@ -115,34 +115,6 @@
                     <div class="info-contacto">
                         <h3>Información del proyecto</h3>
                         <div class="info-contacto__campos">
-                            <div class="form-info">
-                                <label for="proyect">Nombre de artista o proyecto</label>
-                                <input type="text" name="proyect" id="proyect">
-                            </div>
-                            <div class="form-info">
-                                <label for="type">Tipo de proyecto</label>
-                                <select name="type" id="type">
-                                    <option value="Single" selected>Single</option>
-                                    <option value="Ep">Ep</option>
-                                    <option value="Lp">Lp</option>
-                                </select>
-                            </div>
-                            <div class="form-info">
-                                <label for="numberTracks">Cantidad de temas</label>
-                                <input type="number" name="numberTracks" id="numberTracks" max="20" min="1">
-                            </div>
-                            <div class="form-info">
-                                <label for="duration">Duración del proyecto aprox. (en min.)</label>
-                                <input type="text" name="duration" id="duration" placeholder="30 min">
-                            </div>
-                            <div class="form-info">
-                                <label for="dateMix">Fecha de envío de mezclas</label>
-                                <input type="date" name="dateMix" id="dateMix" placeholder="">
-                            </div>
-                            <div class="form-info">
-                                <label for="dateMaster">Fecha en que espera sus masters</label>
-                                <input type="date" name="dateMaster" id="dateMaster" placeholder="" disabled>
-                            </div>
                             <div class="form-info__comentario">
                                 <label for="comment">Comentarios</label>
                                 <textarea name="comment" id="comment" cols="" rows="6"></textarea>
@@ -154,7 +126,7 @@
                     </div>
                 </form>
                 <span class="division"></span>
-                <div class="info-contacto">
+                <!-- <div class="info-contacto">
                     <h3>Información extra</h3>
                     <div class="info-contacto__campos info-contacto__campos-extras">
                         <div class="form-info__faq"><span>1.</span>
@@ -184,7 +156,7 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="mensajeForm" id="mensajeForm">
@@ -193,8 +165,7 @@
             </div>
         </section>
 
-        <section class="form-faqs" id="form-faqs">
-            <!-- <hr> -->
+        <!-- <section class="form-faqs" id="form-faqs">
             <div class="bajada-form">
                 <p>Ante cualquier inquietud, no dude en enviar un correo a <strong>
                         <a href="mailto:viejomastering@gmail.com">correo@gmail.com</a>
@@ -205,7 +176,7 @@
                 <p>Recuerde visitar las preguntas frecuentes para más información.</p>
                 <a class="link-a" href="./faqs.html">FAQ's</a>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <footer class="container-footer">
@@ -235,9 +206,9 @@
                 </ul>
             </div>
         </div>
-        <div class="bajada-footer">
+        <!-- <div class="bajada-footer">
             <p class="firma-fdiazg-dev"> fdiazg.dev 👋</p>
-        </div>
+        </div> -->
     </footer>
 
     <!-- <script src="./js/app.js"></script> -->
