--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
             </div>
             <div class="container-mastering__img">
 
-                <div class="container-botones">
+                <!-- <div class="container-botones">
                     <button id="izquierda" class="btn-flechas ocultar-botones">
                         <i class="bi bi-arrow-left-circle"></i>
                     </button>
                     <button id="derecha" class="btn-flechas">
                         <i class="bi bi-arrow-right-circle"></i>
                     </button>
-                </div>
+                </div> -->
             </div>
             <div class="loader">
                 <div class="lds-dual-ring"></div>
@@ -120,11 +120,11 @@
             </div>
         </div>
 
-        <section>
+        <!-- <section>
             <div class="info-mastering">
 
             </div>
-        </section>
+        </section> -->
     </main>
 
     <footer class="container-footer">
@@ -154,9 +154,9 @@
                 </ul>
             </div>
         </div>
-        <div class="bajada-footer">
+        <!-- <div class="bajada-footer">
             <p class="firma-fdiazg-dev"> fdiazg.dev 👋</p>
-        </div>
+        </div> -->
     </footer>
 
     <script src="./js/app.js"></script>
