--- a/valores.html
+++ b/valores.html
@@ -11,9 +11,10 @@
     <meta name="author" content="viejomastering">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Viejo Mastering</title>
+    <title>Wally producciones</title>
     <!-- TODO CAMBIAR EL ICONO -->
-    <link rel="icon" type="image/png" href="./material_grafico/isotipo/Wally-Isotipo-V1---Rosado-Crema.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./material_grafico/isotipo/Wally-Isotipo-V1---Rosado-Crema.png"
+        sizes="16x16">
     <!-- TODO CAMBIAR EL ICONO -->
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/faqs.css">
@@ -37,7 +38,8 @@
         <div class="contenedor-main">
             <div class="logo">
                 <a href="./index.html">
-                    <img src="./material_grafico/Imagotipo/Wally-Imagotipo-V2--Crema-Rosado.png" alt="Logo" class="user-block__logo">
+                    <img src="./material_grafico/Imagotipo/Wally-Imagotipo-V2--Crema-Rosado.png" alt="Logo"
+                        class="user-block__logo">
                 </a>
             </div>
 
@@ -83,29 +85,27 @@
             <div class="main-faqs">
                 <div class="faqs-lista">
                     <div class="faqs-lista__preguntas">
-                        <h3>¿Qué es Mastering?</h3><i class="bi bi-chevron-down"></i>
+                        <h3>Produccion</h3><i class="bi bi-chevron-down"></i>
                     </div>
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
                             <p>
-                                Masterizar es el proceso estético final de la creación de un disco o canción antes de su
-                                publicación en streaming, lanzamiento en CD, Vinilo, etc.
+                                $
                             </p>
                             <p>
-                                Para lograr esto se emplean herramientas como ecualización, compresión, limitación entre
-                                otras. Todo esto depende de las necesidades que requiera cada proyecto.
+                                $
                             </p>
                         </div>
                     </div>
                     <div class="faqs-lista__preguntas">
-                        <h3>¿Cómo enviar los archivos para masterizar?</h3><i class="bi bi-chevron-down"></i>
+                        <h3>Mezcla</h3><i class="bi bi-chevron-down"></i>
                     </div>
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
                             <p>
                                 Algunas recomendaciones al momento de enviar los archivos son las siguientes:
                             </p>
-                            <ul>
+                            <!-- <ul>
                                 <li>
                                     <p> Es recomenado mandar los archivos en <strong>.wav 24bits.</strong></p>
 
@@ -130,11 +130,11 @@
                                         <strong>(01-cancion, 02-cancion2(single)).</strong>
                                     </p>
                                 </li>
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
                     <div class="faqs-lista__preguntas">
-                        <h3>¿Donde enviar las mezclas?</h3><i class="bi bi-chevron-down"></i>
+                        <h3>¿etc?</h3><i class="bi bi-chevron-down"></i>
                     </div>
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
@@ -151,89 +151,26 @@
                         </div>
                     </div>
                     <div class="faqs-lista__preguntas">
-                        <h3>¿Puedo enviar referencias?</h3><i class="bi bi-chevron-down"></i>
+                        <h3>¿pregunta?</h3><i class="bi bi-chevron-down"></i>
                     </div>
                     <div class="faqs-lista__descripcion">
                         <div class="faqs-lista-contenido">
                             <p>
-                                Si busca algun sonido en especifico y desea envíar algún tema de referencia, no dude en
-                                hacerlo.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus hic eos vero sit quo
+                                assumenda inventore tempore dolor ipsum ad iste enim dignissimos neque, mollitia, at,
+                                earum fugit veniam repellendus?
                             </p>
                             <p>
-                                Adjuntelo junto a sus canciones o mencione donde se puede escuchar dicha canción.
-                                Especifique lo más detallado posible lo que busque conseguir, cualquier comentario o
-                                sugerencia que ayude a lograr el sonido que busca es bien recibido.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta iusto mollitia obcaecati
+                                voluptas? Odit expedita accusamus soluta totam voluptatibus provident impedit, quae enim
+                                esse possimus nihil non mollitia magni qui.
                             </p>
                         </div>
                     </div>
-                    <div class="faqs-lista__preguntas">
-                        <h3>¿Cuanto es el tiempo de entrega de los master?</h3><i class="bi bi-chevron-down"></i>
-                    </div>
-                    <div class="faqs-lista__descripcion">
-                        <div class="faqs-lista-contenido">
-                            <p>
-                                El tiempo de entrega de un Single es de aproximadamente <strong> 3 días</strong>
-                                hábiles.
-                            </p>
-                            <p>
-                                Un Lp o Ep puede variar dependiendo de cuanta sea la cantidad de canciones que se
-                                requieren masterizar.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="faqs-lista__preguntas">
-                        <h3>¿Puedo pedir correcciones en el master?</h3><i class="bi bi-chevron-down"></i>
-                    </div>
-                    <div class="faqs-lista__descripcion">
-                        <div class="faqs-lista-contenido">
-                            <p>
-                                Cada master tiene un límite de 3 correcciones gratuitas dentro de los primeros 7 días
-                                hábiles.
-                            </p>
-                            <p>
-                                Cualquier corrección extra tendrá un costo adicional.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="faqs-lista__preguntas">
-                        <h3>¿Se puede revisar la mezcla antes de mandar a masterizar?</h3><i
-                            class="bi bi-chevron-down"></i>
-                    </div>
-                    <div class="faqs-lista__descripcion">
-                        <div class="faqs-lista-contenido">
-                            <p>
-                                Sí, no hay ningún problema. Puede enviar su mezcla previo al master sin costo adicional.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="faqs-lista__preguntas">
-                        <h3>¿Cómo se envían los master ya terminados?</h3><i class="bi bi-chevron-down"></i>
-                    </div>
-                    <div class="faqs-lista__descripcion">
-                        <div class="faqs-lista-contenido">
-                            <p>
-                                Los master se envían en un archivo de wetransfer en los siguientes formatos:
-                            </p>
-                            <ul>
-                                <li>
-                                    <p>
-                                        1.<strong> Wav 16bit. 44.1Khz</strong>
-                                    </p>
 
-                                </li>
-                                <li>
-                                    <p> 2. Formato original de envío de mezclas
-                                        <strong>(44.1, 48, 88.2, 96khz, etc).</strong>
-                                    </p>
-                                </li>
-                                <li>
-                                    <p>
-                                        3. <strong>Mp3 320Kbps</strong>
-                                    </p>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+
+
+
                 </div>
             </div>
         </section>
@@ -278,7 +215,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
 
 </html>
